fixed an issue where close buttons were shown in develop even when disabled

--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -44,7 +44,7 @@
             md-min-length="0" 
             md-floating-label="Etnicitet"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="ethnicitySearch" md-highlight-flags="gi">{{ethnicity}}</span>
@@ -59,7 +59,7 @@
             md-min-length="0" 
             md-floating-label="Mors etnicitet"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="motherEthnicitySearch" md-highlight-flags="gi">{{ethnicity}}</span>
@@ -74,7 +74,7 @@
             md-min-length="0" 
             md-floating-label="Fars etnicitet"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="fatherEthnicitySearch" md-highlight-flags="gi">{{ethnicity}}</span>
