--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -14,7 +14,7 @@
             md-min-length="0" 
             md-floating-label="Placering"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="placementSearch" md-highlight-flags="gi">{{placement}}</span>
@@ -31,7 +31,7 @@
             md-min-length="0" 
             md-floating-label="Sanktionsforslag"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="sanctionProposalSearch" md-highlight-flags="gi">{{sanctionProposal}}</span>
@@ -49,7 +49,7 @@
             md-min-length="0" 
             md-floating-label="Læge"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="doctorSearch" md-highlight-flags="gi">{{doctor}}</span>
@@ -64,7 +64,7 @@
             md-min-length="0" 
             md-floating-label="Psykolog"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="psychSearch" md-highlight-flags="gi">{{psychologist}}</span>
@@ -79,7 +79,7 @@
             md-min-length="0" 
             md-floating-label="Socialrådgiver"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="socialworkerSearch" md-highlight-flags="gi">{{socialworker}}</span>
@@ -94,7 +94,7 @@
             md-min-length="0" 
             md-floating-label="Sekretær"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="secretarySearch" md-highlight-flags="gi">{{secretary}}</span>
