--- a/app/src/declaration/view/sections/judgement.html
+++ b/app/src/declaration/view/sections/judgement.html
@@ -17,7 +17,7 @@
             md-min-length="0" 
             md-floating-label="Endelig dom"
             ng-disabled="!editPatientData"
-            md-clear-button="true"
+            md-clear-button="editPatientData"
             md-require-match="true">
             <md-item-template>
                 <span md-highlight-text="finalVerdictSearch" md-highlight-flags="gi">{{finalVerdict}}</span>
