--- a/app/src/declaration/view/sections/referral.html
+++ b/app/src/declaration/view/sections/referral.html
@@ -14,7 +14,7 @@
                 md-min-length="0" 
                 md-floating-label="Henvisende instans" 
                 ng-disabled="!editPatientData"
-                md-clear-button="true"
+                md-clear-button="editPatientData"
                 md-require-match="true">
                 <md-item-template>
                     <span md-highlight-text="agencySearch" md-highlight-flags="gi">{{agency}}</span>
@@ -31,7 +31,7 @@
                 md-min-length="0" 
                 md-floating-label="Hovedsigtelse" 
                 ng-disabled="!editPatientData"
-                md-clear-button="true"
+                md-clear-button="editPatientData"
                 md-require-match="true">
                 <md-item-template>
                     <span md-highlight-text="mainChargeSearch" md-highlight-flags="gi">{{mainCarge}}</span>
@@ -48,27 +48,11 @@
         md-min-length="0" 
         md-floating-label="Status"
         ng-disabled="!editPatientData"
-        md-clear-button="true"
+        md-clear-button="editPatientData"
         md-require-match="true">
         <md-item-template>
             <span md-highlight-text="statusSearch" md-highlight-flags="gi">{{status}}</span>
         </md-item-template>
         </md-autocomplete>
-
-        <!-- <div>
-            <md-autocomplete flex 
-            md-selected-item="case.status" 
-            md-search-text="statusSearch" 
-            md-items="status in propertyFilter(propertyValues['status'],mainChargeSearch)"
-                md-item-text="status" 
-                md-min-length="0" 
-                md-floating-label="Status" 
-                ng-disabled="!editPatientData">
-                <md-item-template>
-                    <span md-highlight-text="statusSearch" md-highlight-flags="gi">{{status}}</span>
-                </md-item-template>
-            </md-autocomplete>
-            <md-tooltip md-direction="top" md-delay="500" ng-if="case.status != null">{{case.status}}</md-tooltip>
-        </div> -->
     </md-card-content>
 </md-card>
