--- a/app/src/declaration/view/search-advanced.html
+++ b/app/src/declaration/view/search-advanced.html
@@ -190,7 +190,7 @@
             </div>
         </div>
 
-        <md-button ng-click="advancedSearch(searchParams); toggleResults()">
+        <md-button ng-click="vm.advancedSearch(searchParams); vm.toggleResults()">
             Søg
         </md-button>
     </div>
@@ -199,7 +199,7 @@
 
 <md-card ng-show="results">
     <md-card-title>
-        <md-button ng-click="toggleResults()">Ret søgning</md-button>
+        <md-button ng-click="vm.toggleResults()">Ret søgning</md-button>
         <span flex></span>
         <div layout="row" layout-align="center center">
             <div>Antal: <span class="md-body-2">{{advancedSearchResults.length}}</span></div>
@@ -230,7 +230,7 @@
                     <td md-cell colspan="13" style="text-align:center">Ingen erklæringer passer på din søgning</td>
                 </tbody>
                 <tbody md-body ng-repeat="case in advancedSearchResults | orderBy : query.order ">
-                    <tr md-row ng-click="gotoCase(case.caseNumber)">
+                    <tr md-row ng-click="vm.gotoCase(case.caseNumber)">
                         <td md-cell>{{case.caseNumber}}</td>
                         <td md-cell>{{case.fullName}}</td>
                         <td md-cell>{{case.cprNumber}}</td>
