--- a/app/src/declaration/view/waitinglist.html
+++ b/app/src/declaration/view/waitinglist.html
@@ -18,7 +18,7 @@
                     </tr>
                 </thead>
                 <tbody md-body ng-repeat="case in waitingListCases | orderBy: query.order">
-                    <tr md-row class="clickable" ng-click="gotoCase(case.caseNumber)">
+                    <tr md-row class="clickable" ng-click="vm.gotoCase(case.caseNumber)">
                         <td md-cell>{{case.caseNumber}}</td>
                         <td md-cell>{{case.fullName}}</td>
                         <td md-cell>{{case.cprNumber}}</td>
