--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -1,9 +1,9 @@
 <div layout="row">
     <md-sidenav class="md-sidenav-left sidenav-fixed" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
-        <md-button class="md-text-icon-button" aria-label="edit" ng-click="viewPatientData()">
+        <md-button class="md-text-icon-button" aria-label="edit" ng-click="vm.viewPatientData()">
             <md-icon>assignment</md-icon> Patient data
         </md-button>
-        <md-button class="md-text-icon-button" aria-label="edit" ng-click="viewDocuments()">
+        <md-button class="md-text-icon-button" aria-label="edit" ng-click="vm.viewDocuments()">
             <md-icon>insert_drive_file</md-icon> Dokumenter
         </md-button>
     </md-sidenav>
