--- a/app/src/declaration/view/search-advanced.html
+++ b/app/src/declaration/view/search-advanced.html
@@ -202,7 +202,7 @@
         <md-button ng-click="vm.toggleResults()">Ret søgning</md-button>
         <span flex></span>
         <div layout="row" layout-align="center center">
-            <div>Antal: <span class="md-body-2">{{advancedSearchResults.length}}</span></div>
+            <div>Antal: <span class="md-body-2">{{vm.advancedSearchResults.length}}</span></div>
         </div>
     </md-card-title>
     <md-card-content>
@@ -226,10 +226,10 @@
                         <th md-column md-order-by="totalWaitTime" ng-if="searchParams.waitingTime.time == 'total'">Samlet ventetid</th>
                     </tr>
                 </thead>
-                <tbody md-body ng-if="advancedSearchResults.length == 0">
+                <tbody md-body ng-if="vm.advancedSearchResults.length == 0">
                     <td md-cell colspan="13" style="text-align:center">Ingen erklæringer passer på din søgning</td>
                 </tbody>
-                <tbody md-body ng-repeat="case in advancedSearchResults | orderBy : query.order ">
+                <tbody md-body ng-repeat="case in vm.advancedSearchResults | orderBy : query.order ">
                     <tr md-row ng-click="vm.gotoCase(case.caseNumber)">
                         <td md-cell>{{case.caseNumber}}</td>
                         <td md-cell>{{case.fullName}}</td>
