--- a/app/src/declaration/view/sections/history.html
+++ b/app/src/declaration/view/sections/history.html
@@ -16,7 +16,7 @@
                 <label>Observation påbegyndt</label>
                 <md-datepicker ng-model="case.observationDate" ng-disabled="!editPatientData"></md-datepicker>
             </md-input-container>
-            <span style="float:right" ng-show="isNumber(waitTime.passive)">
+            <span style="float:right" ng-show="vm.isNumber(waitTime.passive)">
                 {{waitTime.passive}}
                 <md-icon class="icon-small">
                     info_outline
@@ -29,7 +29,7 @@
                 <label>Erklæring afgivet</label>
                 <md-datepicker ng-model="case.declarationDate" ng-disabled="!editPatientData"></md-datepicker>
             </md-input-container>
-            <span style="float:right" ng-show="isNumber(waitTime.total)">
+            <span style="float:right" ng-show="vm.isNumber(waitTime.total)">
                 {{waitTime.active}}
                     <md-icon class="icon-small">
                         info_outline
@@ -39,7 +39,7 @@
         </div>
         <div layout="row">
             <span flex></span>
-            <span ng-show="isNumber(waitTime.total)">
+            <span ng-show="vm.isNumber(waitTime.total)">
                 <strong>{{waitTime.total}}</strong>
                     <md-icon class="icon-small">
                         info_outline
