--- a/app/src/documents/view/aproveComment.tmpl.html
+++ b/app/src/documents/view/aproveComment.tmpl.html
@@ -5,8 +5,8 @@
             <div class="md-toolbar-tools">
                 <h2>Godkend dokument</h2>
                 <span flex></span>
-                <md-button class="md-icon-button" ng-click="vm.cancel()">
-                    <i class="material-icons" aria-label="Luk dialogboks">close</i>
+                <md-button class="md-icon-button" ng-click="vm.cancelDialog()">
+                    <md-icon aria-label="Luk dialogboks">close</md-icon>
                 </md-button>
             </div>
         </md-toolbar>
