--- a/app/src/documents/view/document.html
+++ b/app/src/documents/view/document.html
@@ -1,39 +1,19 @@
-<h1 class="od-title">
-	<span class="od-back-btn" ui-sref="projects"><i class="material-icons">arrow_back</i> {{'COMMON.BACK' | translate}}</span>
-	<span ng-if="vm.type == vm.strings.templateProject">{{'COMMON.TEMPLATEPROJECT' | translate}} :</span>
-	<span ng-if="vm.type == 'PD-Project'">{{'PROJECT.PROJECT' | translate}} :</span>
-	<span ng-if="vm.type == 'Project'">{{'PROJECT.GROUPROOM' | translate}} :</span> {{ vm.title }}
-</h1>
 <div>
 	<div layout="row">
 		<md-card flex="75">
-			<md-card-title layout="row">
-				<h3 class="md-title">{{ vm.doc.fileName }}</h3>
-			</md-card-title>
-			<md-card-content layout="column" layout-padding>
+			<md-card-content>
 				<breadcrumb paths="vm.paths"></breadcrumb>
 
-				<div style="max-width:1500px; overflow: auto;">
+				<div>
 					<ng-include src="viewerTemplateUrl"></ng-include>
 				</div>
 			</md-card-content>
-			<md-card-actions layout="row">
-				<span flex></span>
-				<!--<md-button ng-click="vm.openPDF()" class="md-text-icon-button md-primary">
-					<i class='material-icons'>print</i>
-					<span>{{'DOCUMENT.PRINT' | translate}}</span>
-				</md-button>-->
-				<md-button ng-show="vm.canEdit" ng-click="vm.goToLOEditPage()" class="md-text-icon-button md-primary">
-					<i class='material-icons'>edit</i>
-					<span>{{'DOCUMENT.EDIT_DOCUMENT' | translate}}</span>
-				</md-button>
-			</md-card-actions>
 		</md-card>
 
 		<div flex="25">
 			<div ng-include="'app/src/documents/view/documentHistory.html'"></div>
+			<div ng-include="'app/src/documents/view/documentActions.html'"></div>
 			<div ng-include="'app/src/documents/view/documentReview.html'"></div>
 		</div>
 	</div>
-
 </div>
