--- a/app/src/filebrowser/view/fileTableRow.tmpl.html
+++ b/app/src/filebrowser/view/fileTableRow.tmpl.html
@@ -1,6 +1,5 @@
 <td style="width:45%">
     <a class="od-filebrowser-link" ui-sref="{{vm.getLink(content)}}" ui-sref-active="active">
-        <!-- <a class="od-filebrowser-link" ng-dblclick="previewDocument(content.nodeRef)"> -->
         <i class="material-icons">
                                     {{content.contentType == 'cmis:folder' ? 'folder_open' : ''}}
                                     {{content.contentType == 'cmis:link' ? 'link' : ''}}
@@ -13,38 +12,10 @@
     </a>
 </td>
 <td style="width:40%" hide show-gt-sm>
-    <table style="width:100%">
-        <tr>
-            <td style="border: none; margin: 0; padding: 0">
-                <a class="od-filebrowser-link" ui-sref="{{vm.getLink(content)}}" ui-sref-active="active">
-                                            {{content.lastChanged | openeDate}}&nbsp;-&nbsp;{{content.lastChangedBy}}</a>
-            </td>
-
-            <td ng-show="content.contentType === 'cmis:document' && content.hasHistory" style="border: none; margin: 0; padding: 0">
-                <md-menu md-position-mode="left bottom">
-                    <md-button style="float: left" class="md-icon-button" aria-label="Se historik" ng-click="$mdMenu.open(); vm.loadHistory(content.shortRef)">
-                        <md-icon md-menu-origin title="Se historik " style="font-size: 22px; position: relative; top: 5px">history</md-icon>
-                    </md-button>
-                    <md-menu-content>
-                        <md-menu-item class="menu-list-head ">
-                            {{'COMMON.MODIFIED' | translate}}
-                            <span style="width: 70px; "></span> {{'COMMON.MODIFIED_BY' | translate}}
-                        </md-menu-item>
-                        <md-menu-item ng-repeat="h in history" class="menu-list">
-                            <a href="#!/dokument/{{h.nodeRef}}?archived=true&parent={{h.parent_nodeRef}}&version={{h.version}} ">
-                                                            {{ h.created | openeDate }}&nbsp;&nbsp;&nbsp;&nbsp;{{
-                                                            h.modifier }}</a>
-                            </md-button>
-                        </md-menu-item>
-                    </md-menu-content>
-                </md-menu>
-            </td>
-        </tr>
-    </table>
-</td>
-<td hide show-gt-md ng-if="vm.enableESDH" style="width:10%" ng-if="isSite">
-    <input type="checkbox" name="to-esdh" ng-model="content.sendToSbsys" ng-if="content.contentType!='cmis:link' " aria-label="Vælg" ng-click="vm.loadCheckboxes()">
+    <a class="od-filebrowser-link" ui-sref="{{vm.getLink(content)}}" ui-sref-active="active">
+        {{content.lastChanged | openeDate}}&nbsp;-&nbsp;{{content.lastChangedBy}}
+    </a>
 </td>
 <td style="width:5%">
-    <div ng-include=" 'app/src/filebrowser/view/actions/actionMenu.html' "></div>
+    <div ng-include=" 'app/src/filebrowser/actions/actionMenu.html' "></div>
 </td>
