--- a/app/src/filebrowser/view/filebrowserCard.html
+++ b/app/src/filebrowser/view/filebrowserCard.html
@@ -1,5 +1,6 @@
 <md-card>
     <md-card-content>
-        <ng-include src="'app/src/filebrowser/view/filebrowser.html'"></ng-include>
+        <!-- <ng-include src="'app/src/filebrowser/view/filebrowser.html'"></ng-include> -->
+        <od-filebrowser></od-filebrowser>
     </md-card-content>
 </md-card>
