--- a/app/src/filebrowser/view/filebrowser.html
+++ b/app/src/filebrowser/view/filebrowser.html
@@ -1,5 +1,5 @@
 <div>
-    <breadcrumb paths="vm.paths"></breadcrumb>
+    <breadcrumb ng-if="breadcrumb" paths="vm.paths"></breadcrumb>
 
     <md-progress-linear md-mode="indeterminate" ng-show="uploading"></md-progress-linear>
 
