--- a/app/src/filebrowser/view/filebrowserCard.html
+++ b/app/src/filebrowser/view/filebrowserCard.html
@@ -1,5 +1,5 @@
 <md-card>
     <md-card-content>
-        <od-filebrowser></od-filebrowser>
+        <od-filebrowser od-breadcrumb="true" od-folders="true" od-preview="true"></od-filebrowser>
     </md-card-content>
 </md-card>
