--- a/app/src/filebrowser/view/fileTableRow.tmpl.html
+++ b/app/src/filebrowser/view/fileTableRow.tmpl.html
@@ -13,7 +13,7 @@
 </td>
 <td hide show-gt-sm>
     <a ui-sref="{{preview ? vm.getLink(content) : ''}}">
-        {{content.lastChanged | openeDate}}&nbsp;-&nbsp;{{content.lastChangedBy}}
+        {{content.lastChanged | openeDate}} - {{content.lastChangedBy}}
     </a>
 </td>
 <td style="text-align:right">
