--- a/app/src/authentication/view/login.html
+++ b/app/src/authentication/view/login.html
@@ -1,5 +1,5 @@
 <div class="login-form" layout="column" layout-align="center center">
-    <h1 class="logo">Retspsykiatriske erklæringer</h1>
+    <h1 class="logo"><strong>O</strong>bservand <strong>DA</strong>tabase</h1>
     <md-card class="login-form__card" flex="initial">
         <md-toolbar>
             <h1 layout="row" layout-align="center center">
