--- a/app/src/declaration/view/document-toolbar.html
+++ b/app/src/declaration/view/document-toolbar.html
@@ -8,7 +8,7 @@
             <md-button class="md-icon-button" aria-label="download" ng-click="downloadDocuments($event)">
                 <md-icon>file_download</md-icon>
                 <md-tooltip md-direction="top" md-delay="500">Download</md-tooltip>
-            </md-button> 
+            </md-button>
             <md-button class="md-icon-button" aria-label="edit" ng-click="deleteDocumentsDialog($event)">
                 <md-icon>delete</md-icon>
                 <md-tooltip md-direction="top" md-delay="500">Slet</md-tooltip>
@@ -22,7 +22,7 @@
 </span>
 
 <span ng-if="case.hasOwnProperty('closed') || case.hasOwnProperty('closedWithoutDeclaration')">
-    <md-icon>done</md-icon> Sagen er afsluttet
+    <md-icon>done</md-icon> {{'DECLARATION.DECLARATION_CLOSED' | translate}}
 </span>
 
 <md-button class="md-icon-button" aria-label="view" ng-click="toggleDocumentView()">
