--- a/app/src/declaration/view/patient-info-toolbar.html
+++ b/app/src/declaration/view/patient-info-toolbar.html
@@ -1,13 +1,13 @@
 <span ng-if="vm.canEdit">
     <span ng-hide="canCurrentlyEdit">
-        <md-icon>warning</md-icon> 
+        <md-icon>warning</md-icon>
         <md-tooltip>Sagen redigeres i øjeblikket af {{editor.displayName}}</md-tooltip>
     </span>
 
     <span ng-if="(currentCase.hasOwnProperty('closed') && currentCase.closed) || (currentCase.hasOwnProperty('closedWithoutDeclaration') && currentCase.closedWithoutDeclaration)">
         <md-icon>done</md-icon> {{'DECLARATION.DECLARATION_CLOSED' | translate}}
 
-        <md-button ng-if="canReopenEntries" class="md-text-icon-button" aria-label="genåben erklæringen" ng-click="unlockEntry()">
+        <md-button ng-if="canReopenEntries" class="md-text-icon-button" aria-label="genåben sagen" ng-click="unlockEntry()">
             <md-icon>lock_open</md-icon> {{'DECLARATION.REOPEN' | translate}}
         </md-button>
     </span>
