giant refactor. filebrowser made into a contentList, seperated concerns

--- a/app/src/declaration/view/document-toolbar.html
+++ b/app/src/declaration/view/document-toolbar.html
@@ -18,6 +18,9 @@
         <md-button class="md-text-icon-button" aria-label="edit" ng-click="uploadDocumentsDialog($event)">
             <md-icon>file_upload</md-icon> Nyt dokument
         </md-button>
+        <md-button class="md-text-icon-button" aria-label="edit" ng-click="newFolderDialog($event)">
+            <md-icon>create_new_folder</md-icon> Ny mappe
+        </md-button>
     </span>
 </span>
 
@@ -25,6 +28,6 @@
     <md-icon>done</md-icon> {{'DECLARATION.DECLARATION_CLOSED' | translate}}
 </span>
 
-<md-button class="md-icon-button" aria-label="view" ng-click="toggleDocumentView()">
+<!-- <md-button class="md-icon-button" aria-label="view" ng-click="toggleDocumentView()">
     <md-icon>{{toggleIcon}}</md-icon>
-</md-button>
+</md-button> -->
