--- a/app/src/system_settings/lists/view/list-rename.html
+++ b/app/src/system_settings/lists/view/list-rename.html
@@ -14,7 +14,7 @@
         <md-dialog-content class="md-padding">
             <md-input-container class="md-block">
                 <label>{{'MEMBER.NAME' | translate}}</label>
-                <input ng-model="selectedForRename.title" md-autofocus required>
+                <input ng-model="newEntry" md-autofocus required>
             </md-input-container>
         </md-dialog-content>
 
