--- a/app/src/system_settings/practitioners/view/practitioner-list.html
+++ b/app/src/system_settings/practitioners/view/practitioner-list.html
@@ -13,15 +13,27 @@
                         <th md-column md-numeric md-order-by="GROUP_site_retspsyk_TemplateFolderValueManager">Oprette dokumentskabeloner</th>
                     </tr>
                 </thead>
-                <tbody md-body ng-repeat="user in allUsers | orderBy: query.order" ng-if="user.userName!='admin'">
-                    <tr md-row>
+                <tbody md-body>
+                    <tr md-row ng-repeat="user in allUsers | orderBy: query.order" ng-if="user.userName!='admin'">
                         <td md-cell>{{user.firstName}} {{user.lastName}}</td>
-                        <td md-cell><md-checkbox aria-label="aktiveret" ng-model="user.active" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
-                        <td md-cell><md-checkbox aria-label="kun læse" ng-model="user.GROUP_site_retspsyk_SiteConsumer" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
-                        <td md-cell><md-checkbox aria-label="genåbne sager" ng-model="user.GROUP_site_retspsyk_SiteEntryLockManager" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
-                        <td md-cell><md-checkbox aria-label="redigere lister" ng-model="user.GROUP_site_retspsyk_SitePropertyValueManager" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
-                        <td md-cell><md-checkbox aria-label="tildele roller" ng-model="user.GROUP_site_retspsyk_SiteRoleManager" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
-                        <td md-cell><md-checkbox aria-label="Oprette dokumentskabeloner" ng-model="user.GROUP_site_retspsyk_TemplateFolderValueManager" ng-disabled="!isEditing || (user.userName == 'admin')"></md-checkbox></td>
+                        <td md-cell>
+                            <md-checkbox aria-label="aktiveret" ng-model="user.active"></md-checkbox>
+                        </td>
+                        <td md-cell>
+                            <md-checkbox aria-label="kun læse" ng-model="user.GROUP_site_retspsyk_SiteConsumer"></md-checkbox>
+                        </td>
+                        <td md-cell>
+                            <md-checkbox aria-label="genåbne sager" ng-model="user.GROUP_site_retspsyk_SiteEntryLockManager"></md-checkbox>
+                        </td>
+                        <td md-cell>
+                            <md-checkbox aria-label="redigere lister" ng-model="user.GROUP_site_retspsyk_SitePropertyValueManager"></md-checkbox>
+                        </td>
+                        <td md-cell>
+                            <md-checkbox aria-label="tildele roller" ng-model="user.GROUP_site_retspsyk_SiteRoleManager"></md-checkbox>
+                        </td>
+                        <td md-cell>
+                            <md-checkbox aria-label="Oprette dokumentskabeloner" ng-model="user.GROUP_site_retspsyk_TemplateFolderValueManager"></md-checkbox>
+                        </td>
                     </tr>
                 </tbody>
             </table>
